--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.0-alpha2-dist/css/bootstrap.css">
+    <script src="./bootstrap-5.3.0-alpha2-dist/js/bootstrap.bundle.js"></script>
+    <title>HighWay</title>
 </head>
-<body>
-    
+<body> 
+  
+  <div class="center">Este elemento está centralizado.</div>
+
 </body>
 </html>
