--- a/index.html
+++ b/index.html
@@ -11,7 +11,75 @@
 </head>
 <body> 
   
-  <div class="center">Este elemento está centralizado.</div>
+  <div class="center"><img class="face" src="date.png"></div>
+
+  <br>
+<div class="renan">
+  <div class="cassio">
+    <input type="text" placeholder="Buscar..">
+  </div>
+</div>
+
+<div class="gato">
+<img class="otavio" src="header.jpg">
+</div>
+
+  <div class="outside"><img class="fale" src="Sem título_cropped.png">
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+    
+<br>
+
+<p>
+  Sobre
+</p>
+
+<p>
+  Loja
+</p>
+
+<select class="vale">Categorias
+  <option class="vale" value="Categorias">Categorias</option>
+  <option class="vale" value="Aventura" selected>Aventura</option>
+  <option class="vale" value="Ação" selected>Ação</option>
+  <option class="vale" value="Casual" selected>Casual</option>
+  <option class="vale" value="Corrida" selected>Corrida</option>
+  <option class="vale" value="Esporte" selected>Esporte</option>
+  <option class="vale" value="Estratégia" selected>Estratégia</option>
+  <option class="vale" value="RPG" selected>RPG</option>
+</select>
+<br>
+<br>
+
+<p>Promoções</p>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+  
+
+<footer class="clauder" >
+  Copyright 2023 © - GameReview™
+</footer>
 
 </body>
 </html>
